--- a/calendar.html
+++ b/calendar.html
@@ -12,7 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
     />
     
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style_calendar.css" />
     
   </head>
   <body>
@@ -53,6 +53,7 @@
         </div>
       </div>
     </section>
+    <!-- 왼쪽 -->
     <section class="content-left mb-2">
       <div class="day-of-week font-monospace">
         <div class="dayHeader">Sun</div>
