--- a/calendar.html
+++ b/calendar.html
@@ -12,7 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
     />
     
-    <link rel="stylesheet" href="style_calendar.css" />
+    <link rel="stylesheet" href="style.css" />
     
   </head>
   <body>
