--- a/5.21.html
+++ b/5.21.html
@@ -312,7 +312,7 @@
     <section class="cont-right">
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <span>pallete</span>
+        <span>Pastel Pallete</span>
         <table class="colorchip" style="padding-left: 20px;">
             <tr>
                 <td style="background-color: #faf1d6"></td>
@@ -332,7 +332,8 @@
     </div>
 
     <!-- Use any element to open the sidenav -->
-    <span onclick="openNav()">open</span>
+    <button type="button" class="btn btn-outline-success fs-5 font-monospace" onclick="openNav()">Open Pallete</button>
+   
      <!--<table class="colorchip">
         <tr>
           <td style="background-color: #faf1d6"></td>
