--- a/5.20.html
+++ b/5.20.html
@@ -82,7 +82,7 @@
         <div class="d-flex">
             <h2 class="text-success">
                 <i class="bi bi-calendar-check"></i>
-                <span class="font-monospace">Study Planner</span>
+                <span class="font-monospace">S</span>
             </h2>
 
 
