--- a/5.20.html
+++ b/5.20.html
@@ -82,7 +82,7 @@
         <div class="d-flex">
             <h2 class="text-success">
                 <i class="bi bi-calendar-check"></i>
-                <span class="font-monospace">S</span>
+                <span class="font-monospace">STUDY MATE</span>
             </h2>
 
 
@@ -291,46 +291,34 @@
     <section class="cont-right">
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <span class="font-monospace" style="color :#198754 ; font-weight:bold; font-size: large; margin: 20px; "> Pastel Pallete</span>
+            <span class="font-monospace" style="color :#198754 ; font-weight:bold; font-size: large; margin: 20px; ">
+                Pastel Pallete</span>
             <table class="colorchip" style="margin-left: 20px;">
                 <tr>
-                    <td style="background-color: #faf1d6"></td>
-                    <td style="background-color: #fdafab"></td>
-                    <td style="background-color: #fadee1"></td>
-                    <td style="background-color: #d9f1f1"></td>
-                    <td style="background-color: #b6e3e9"></td>
+                    <td style="background-color: #eef2ff"></td>
+                    <td style="background-color: #ffd9f5"></td>
+                    <td style="background-color: #fbeeff"></td>
+                    <td style="background-color: #fff8e6"></td>
+                    <td style="background-color: #ffcde2"></td>
                 </tr>
                 <tr>
-                    <td style="background-color: #d2e9e1"></td>
-                    <td style="background-color: #fbedc9"></td>
-                    <td style="background-color: #fcb6d0"></td>
-                    <td style="background-color: #ffdee1"></td>
-                    <td style="background-color: #dadafc"></td>
+                    <td style="background-color: #b6e3e9"></td>
+                    <td style="background-color: #c4e1ff"></td>
+                    <td style="background-color: #9ad6fb"></td>
+                    <td style="background-color: #d9d9ff"></td>
+                    <td style="background-color: #ebcaff"></td>
+
                 </tr>
             </table>
         </div>
 
-        <!-- Use any element to open the sidenav -->
+     
+        <div id="print_" class="font-monospace"
+            style="color :#198754 ; font-weight:bold; font-size: 25px; margin-left: 10px">Hour
+            Minute </div>
 
-        <!--<table class="colorchip">
-        <tr>
-          <td style="background-color: #faf1d6"></td>
-          <td style="background-color: #fdafab"></td>
-          <td style="background-color: #fadee1"></td>
-          <td style="background-color: #d9f1f1"></td>
-          <td style="background-color: #b6e3e9"></td></tr><tr>
-          <td style="background-color: #d2e9e1"></td>
-          <td style="background-color: #fbedc9"></td>
-          <td style="background-color: #fcb6d0"></td>
-          <td style="background-color: #ffdee1"></td>
-          <td style="background-color: #dadafc"></td>
-        </tr>
-      </table>-->
-      <div id="print_" class="font-monospace" style="color :#198754 ; font-weight:bold; font-size: 25px; margin-left: 10px">Hour
-        Minute </div>
-
-        <button type="button" class="btn btn-outline-success fs-5 font-monospace" style="margin: 10px ; margin-left: 50px"
-            onclick="openNav()">Open Pallete</button>
+        <button type="button" class="btn btn-outline-success fs-5 font-monospace"
+            style="margin: 10px ; margin-left: 50px" onclick="openNav()">Open Pallete</button>
 
         <div class="d-flex">
             <table class="time font-monospace">
