--- a/5.21.html
+++ b/5.21.html
@@ -294,38 +294,24 @@
             <span class="font-monospace" style="color :#198754 ; font-weight:bold; font-size: large; margin: 20px; "> Pastel Pallete</span>
             <table class="colorchip" style="margin-left: 20px;">
                 <tr>
-                    <td style="background-color: #faf1d6"></td>
-                    <td style="background-color: #fdafab"></td>
-                    <td style="background-color: #fadee1"></td>
-                    <td style="background-color: #d9f1f1"></td>
-                    <td style="background-color: #b6e3e9"></td>
+                    <td style="background-color: #eef2ff"></td>
+                    <td style="background-color: #ffd9f5"></td>
+                    <td style="background-color: #fbeeff"></td>
+                    <td style="background-color: #fff8e6"></td>
+                    <td style="background-color: #ffcde2"></td>
                 </tr>
                 <tr>
-                    <td style="background-color: #d2e9e1"></td>
-                    <td style="background-color: #fbedc9"></td>
-                    <td style="background-color: #fcb6d0"></td>
-                    <td style="background-color: #ffdee1"></td>
-                    <td style="background-color: #dadafc"></td>
+                    <td style="background-color: #b6e3e9"></td>
+                    <td style="background-color: #c4e1ff"></td>
+                    <td style="background-color: #9ad6fb"></td>
+                    <td style="background-color: #d9d9ff"></td>
+                    <td style="background-color: #ebcaff"></td>
+
                 </tr>
             </table>
         </div>
 
-        <!-- Use any element to open the sidenav -->
-
-        <!--<table class="colorchip">
-        <tr>
-          <td style="background-color: #faf1d6"></td>
-          <td style="background-color: #fdafab"></td>
-          <td style="background-color: #fadee1"></td>
-          <td style="background-color: #d9f1f1"></td>
-          <td style="background-color: #b6e3e9"></td></tr><tr>
-          <td style="background-color: #d2e9e1"></td>
-          <td style="background-color: #fbedc9"></td>
-          <td style="background-color: #fcb6d0"></td>
-          <td style="background-color: #ffdee1"></td>
-          <td style="background-color: #dadafc"></td>
-        </tr>
-      </table>-->
+        
         <div id="print_" class="font-monospace" style="color :#198754 ; font-weight:bold; font-size: 25px; margin-left: 10px">Hour
             Minute </div>
 
