--- a/5.21.html
+++ b/5.21.html
@@ -91,7 +91,7 @@
               <button type="button" class="prev btn btn-outline-success btn-sm ms-1"
                 onclick="location.href='5.20.html' ">&#60</button>
               <span class=" fs-4 font-monospace container-sm" style="color: #198754;font-size: large; ">May 21th</span>
-              <button type="button" class="next btn btn-outline-success btn-sm ms-1">&#62</button>
+              <button type="button" class="next btn btn-outline-success btn-sm ms-1" onclick="location.href='5.22.html' ">&#62</button>
               </div>
               
 
