--- a/5.22.html
+++ b/5.22.html
@@ -121,6 +121,8 @@
                 <button type="button" id="add" class="btn ms-1 text-nowrap" style="background: #198754; color: white;">
                     <i class="bi bi-plus font-monospace"></i> Add
                 </button>
+                <button type="button" class="btn btn-outline-success fs-5 font-monospace"
+            style="margin: 10px ; margin-left: 50px" onclick="openNav()">Open Pallete</button>
             </div>
 
             <div class="d-flex">
@@ -328,8 +330,7 @@
         <div id="print_" class="font-monospace" style="color :#198754 ; font-weight:bold; font-size: 25px; margin-left: 10px">Hour
             Minute </div>
 
-        <button type="button" class="btn btn-outline-success fs-5 font-monospace" style="margin: 10px ; margin-left: 50px"
-            onclick="openNav()">Open Pallete</button>
+       
 
         <div class="d-flex">
             <table class="time font-monospace">
