--- a/5.22.html
+++ b/5.22.html
@@ -94,7 +94,7 @@
 
         <div class="d-flex">
             <h2 class="text-success">
-                <i class="bi bi-calendar-check"></i>
+                <button class="btn btn-outline-success ms-3"  onclick="location.href='calendar.html' "><i class="bi bi-calendar-check"></i></button>
                 <span class="font-monospace">STUDY MATE</span>
             </h2>
 
@@ -122,7 +122,7 @@
                     <i class="bi bi-plus font-monospace"></i> Add
                 </button>
                 <button type="button" class="btn btn-outline-success fs-5 font-monospace"
-            style="margin: 10px ; margin-left: 50px" onclick="openNav()">Open Pallete</button>
+            style="margin: 10px ; margin-left: 50px" onclick="openNav()">Pallete</button>
             </div>
 
             <div class="d-flex">
