--- a/5.22.html
+++ b/5.22.html
@@ -171,18 +171,18 @@
             Done: 2,
         };
 
-        let tasks = [];
+        let tasks_22 = [];
 
         function loadTasks() {
-            let lastTasks = localStorage.getItem("tasks");
+            let lastTasks = localStorage.getItem("tasks_22");
             if (!lastTasks) return;
 
-            tasks = JSON.parse(lastTasks);
-            tasks.forEach(addToList);
+            tasks_22 = JSON.parse(lastTasks);
+            tasks_22.forEach(addToList);
         }
 
         function saveTasks() {
-            localStorage.setItem("tasks", JSON.stringify(tasks));
+            localStorage.setItem("tasks_22", JSON.stringify(tasks_22));
         }
 
         function addDone(task) {
@@ -201,7 +201,7 @@
 
             buttonRemove.addEventListener("click", () => {
                 div.remove();
-                tasks = tasks.filter((t) => t !== task);
+                tasks_22 = tasks_22.filter((t) => t !== task);
                 saveTasks();
             });
 
@@ -243,7 +243,7 @@
 
             buttonRemove.addEventListener("click", () => {
                 div.remove();
-                tasks = tasks.filter((t) => t !== task);
+                tasks_22 = tasks_22.filter((t) => t !== task);
                 saveTasks();
             });
 
@@ -268,7 +268,7 @@
                 type: Type.Todo,
             };
 
-            tasks.push(task);
+            tasks_22.push(task);
             saveTasks();
 
             addToList(task);
@@ -290,7 +290,7 @@
             };
 
             // 3. Append the new Task object to tasks
-            tasks.push(task);
+            tasks_22.push(task);
             saveTasks();
 
             // 4. Create a new task item and attach it to #todo-list.
